--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <head>
   <title>Hopes profile</title>
    </head>
-  <h1>Hello World!</h1>
+  <h1>Hello, World!</h1>
   <a href="https://www.kodewithklossy.com/">Check out kwk</a>
 </html>
